[metadata]
name=nettool,

[files]
packages=nettool
packages_root=nettool

[flake8]
max-line-length=100
max-complexity=10
exclude = __init__.py

[clonedigger]
clonedigger-file = duplicate_code.html

[coverage:run]
source=nettool

[coverage:report]
skip_covered=true
omit=__init__.py

[pytest]
failed-first=true
no-cov-on-fail=true
quiet_growl=true
testpaths = 
    test/unit

[pytest-watch]
nobeep=true

[nosetests]
stop=true
nocapture=true
tests=test/unit
cover-erase=true
cover-package=nettool
logging-filter=nettool

[bumpversion]
current_version = 0.7
